--- a/_config.yml
+++ b/_config.yml
@@ -4,26 +4,26 @@ remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 
 # Site Settings
 title: "Site Template"
-subtitle: "Awesome Site Template"
-name: "Your Name"
-description: "Your website description!"
+subtitle: ""
+name: "callsignroy"
+description: ""
 locale: "en-US"
 breadcrumbs: true
 search: true
 
 # Site Author
 author:
-  name   : "Your Name"
-  bio: "Your Bio"
+  name   : "callsignroy"
+  bio: ""
   avatar : "https://avatars.githubusercontent.com/u/9919?s=110&v=4"
-  location: Localhost, GitHub
+  location: Earth
   links:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/callsignroy"
     - label: "YouTube"
       icon: "fab fa-fw fa-youtube"
       url: "https://www.youtube.com/"
@@ -35,7 +35,7 @@ og_image: "https://avatars.githubusercontent.com/u/9919?s=110&v=4"
 permalink: /:categories/:title/
 paginate: 5
 paginate_path: /page:num/
-timezone: Europe/Paris
+timezone: Asia/Singapore
 atom_feed:
   hide: true
 
